syntax = "proto3";

option go_package = "backend/pb";

package pb;

service Chat {
  rpc AnswerService (UserRequest) returns (ChatResponse) {}
}

service Greet {
  rpc SayHelloService (UserRequest) returns (HelloResponse) {}
}

service Timeout {
  rpc TimeoutService (UserRequest) returns (TimeoutResponse) {}
}

message UserRequest {
  int32 state = 1;
  string name = 2;
  string input = 3;
  float balance = 4;
  float bill = 5;
}

message ChatResponse {
  int32 state = 1;
  repeated string answer = 2;
  float balance = 3;
  float bill = 4;
  optional bool verification = 5;
  optional int32 timer = 6;
}

message HelloResponse {
  repeated string words = 1;
}

message TimeoutResponse {
  bool is_exit = 1;
  bool reset = 2;
  int32 state = 3;
  repeated string answer = 4;
  float balance = 5;
  float bill = 6;
}